tests/duplicate_libs/test.js
global_foo as string; // error: number ~> string
require('bar') as number; // error: string ~> number
